@@ -41,6 +41,7 @@ version 2.0.0:
 	  transfer window
 	* Newly installed plugins can now be activated without restarting Gaim
 	  (Sadrul Habib Chowdhury)
+	* The Evolution Integration plugin now supports Groupwise contacts
 
 	Bug fixes:
 	* People using input methods can now use Enter again.
